tests/security/xhpElementAttributeTaint/output.txt
ERROR: TaintedData - input.hack:5:18 - Data from a URL query string found its way to an HTML attribute